feat(user): should be able to bookmark articles
- users can bookmark articles for reading later

- users can get a list of articles they’re following  

[(Delivers ) #159987417]
